c4prj1_deck/grade.txt
Grading at Thu 05 Oct 2023 11:45:51 AM UTC
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:166:18: error: expected expression before ‘{’ token
  166 |   match_counts = {0};
      |                  ^
Compilation of eval.c failed

Overall Grade: F
